--- a/explore.html
+++ b/explore.html
@@ -207,16 +207,16 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-6 col-sm-6">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/nft-8.png" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-01.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-11.jpeg" alt="" style="border-radius: 20px;">
                 <h4>Mutant Ape Bored</h4>
               </div>
               <div class="col-lg-6 col-sm-6">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/nft-10.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-02.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-14.jpg" alt="" style="border-radius: 20px;">
                 <h4>His Other Half</h4>
               </div>
               <div class="col-lg-12">
@@ -238,7 +238,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -267,7 +267,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -278,7 +278,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="row">
               <div class="col-lg-12">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/author-02.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
                 <img src="assets/images/discover-04.jpg" alt="" style="border-radius: 20px;">
                 <h4>Another Half Ape</h4>
@@ -296,7 +296,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -307,9 +307,9 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="row">
               <div class="col-lg-12">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/nft-2.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-03.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/imheage.jpeg" alt="" style="border-radius: 20px;">
                 <h4>Pixel Sand Box</h4>
               </div>
               <div class="col-lg-12">
@@ -325,7 +325,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -336,9 +336,9 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="row">
               <div class="col-lg-12">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/author-03.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-04.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-11.jpeg" alt="" style="border-radius: 20px;">
                 <h4>Another Half Ape</h4>
               </div>
               <div class="col-lg-12">
@@ -354,7 +354,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -365,9 +365,9 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="row">
               <div class="col-lg-12">
                 <span class="author">
-                  <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                  <img src="assets/images/nft-3.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-06.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-13.jpeg" alt="" style="border-radius: 20px;">
                 <h4>Invisible NFT Land</h4>
               </div>
               <div class="col-lg-12">
@@ -383,7 +383,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
@@ -396,7 +396,7 @@ https://Phoneix.com/tm-577-Phoneix-market
                 <span class="author">
                   <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/discover-05.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-15.jpeg" alt="" style="border-radius: 20px;">
                 <h4>Another Half Ape</h4>
               </div>
               <div class="col-lg-12">
@@ -412,7 +412,7 @@ https://Phoneix.com/tm-577-Phoneix-market
               </div>
               <div class="col-lg-12">
                 <div class="main-button">
-                  <a href="details.html">View Details</a>
+                  <a href="">View Details</a>
                 </div>
               </div>
             </div>
