--- a/explore.html
+++ b/explore.html
@@ -443,14 +443,14 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>2.</h4>
-                <img src="assets/images/author-02.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-8.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>George Brandon<br><a href="#">4.8 ETH or $14,000</a></h6>
               </div>
             </div>
             <div class="col-lg-12">
               <div class="item">
                 <h4>3.</h4>
-                <img src="assets/images/author-03.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-10.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>Johnny Mayson<br><a href="#">6.2 ETH or $26,000</a></h6>
               </div>
             </div>
@@ -468,7 +468,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>5.</h4>
-                <img src="assets/images/author-02.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-9.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>Ronald Martino<br><a href="#">7.2 ETH or $14,500</a></h6>
               </div>
             </div>
@@ -486,7 +486,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>7.</h4>
-                <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-8.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>Phoneix Artist<br><a href="#">9.8 ETH or $14,200</a></h6>
               </div>
             </div>
@@ -500,7 +500,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>9.</h4>
-                <img src="assets/images/author-03.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-3.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>David Walker<br><a href="#">2.5 ETH or $12,000</a></h6>
               </div>
             </div>
