--- a/explore.html
+++ b/explore.html
@@ -443,7 +443,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>2.</h4>
-                <img src="assets/images/nft-8.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/nft-8.png" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>George Brandon<br><a href="#">4.8 ETH or $14,000</a></h6>
               </div>
             </div>
@@ -486,7 +486,7 @@ https://Phoneix.com/tm-577-Phoneix-market
             <div class="col-lg-12">
               <div class="item">
                 <h4>7.</h4>
-                <img src="assets/images/nft-8.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
+                <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 <h6>Phoneix Artist<br><a href="#">9.8 ETH or $14,200</a></h6>
               </div>
             </div>
@@ -515,20 +515,8 @@ https://Phoneix.com/tm-577-Phoneix-market
                 <h6>Phoneix Artist<br><a href="#">8.8 ETH or $16,800</a></h6>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="item">
-                <h4>11.</h4>
-                <img src="assets/images/author-02.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
-                <h6>Anthony Brown<br><a href="#">7.5 ETH or $15,400</a></h6>
-              </div>
-            </div>
-            <div class="col-lg-12">
-              <div class="item">
-                <h4>12.</h4>
-                <img src="assets/images/author-03.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
-                <h6>David Walker<br><a href="#">5.2 ETH or $12,300</a></h6>
-              </div>
-            </div>
+           
+         
           </div>
         </div>
       </div>
@@ -541,7 +529,7 @@ https://Phoneix.com/tm-577-Phoneix-market
         <div class="col-lg-12">
           <p>Copyright © 2022 <a href="#">Phoneix</a> NFT Marketplace Co., Ltd. All rights reserved.
           &nbsp;&nbsp;
-          Designed by <a title="HTML CSS Templates" rel="sponsored" href="https://Phoneix.com" target="_blank">Phoneix</a></p>
+          Designed by <a title="" rel="sponsored" href="https://portfolio-gion.onrender.com" target="_blank">Gion</a></p>
         </div>
       </div>
     </div>
