--- a/explore.html
+++ b/explore.html
@@ -309,8 +309,8 @@ https://Phoneix.com/tm-577-Phoneix-market
                 <span class="author">
                   <img src="assets/images/nft-2.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/imheage.jpeg" alt="" style="border-radius: 20px;">
-                <h4>Pixel Sand Box</h4>
+                <img src="assets/images/imheages.jpeg" alt="" style="border-radius: 20px;">
+                <h4>A Senior APE</h4>
               </div>
               <div class="col-lg-12">
                 <div class="line-dec"></div>
@@ -396,7 +396,7 @@ https://Phoneix.com/tm-577-Phoneix-market
                 <span class="author">
                   <img src="assets/images/author.jpg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/nft-15.jpeg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-15.jpg" alt="" style="border-radius: 20px;">
                 <h4>Another Half Ape</h4>
               </div>
               <div class="col-lg-12">
