--- a/explore.html
+++ b/explore.html
@@ -216,7 +216,7 @@ https://Phoneix.com/tm-577-Phoneix-market
                 <span class="author">
                   <img src="assets/images/nft-10.jpeg" alt="" style="max-width: 50px; max-height: 50px; border-radius: 50%;">
                 </span>
-                <img src="assets/images/nft-14.jpg" alt="" style="border-radius: 20px;">
+                <img src="assets/images/nft-14.jpeg" alt="" style="border-radius: 20px;">
                 <h4>His Other Half</h4>
               </div>
               <div class="col-lg-12">
