--- a/explore.html
+++ b/explore.html
@@ -60,9 +60,10 @@ https://Phoneix.com/tm-577-Phoneix-market
                     <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="explore.html" class="active">Explore</a></li>
-                        <li><a href="details.html">Item Details</a></li>
-                        <li><a href="author.html">Author</a></li>
-                        <li><a href="create.html">Create Yours</a></li>
+                        <li><a href="details.html">Connect</a></li>
+                        
+                        <li><a href="create.html">Create Your NFTs</a></li>
+                      <li><a href="author.html">Login</a></li>
                     </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
